Added the group members name and changed the group name from the generic to 24

--- a/seng637-a1-24.md
+++ b/seng637-a1-24.md
@@ -2,10 +2,10 @@
 
 **Lab. Report \#1 – Introduction to Testing and Defect Tracking**
 
-| Group: Group Number      |
+| Group: Group 24      |
 |-----------------|
-| Student 1 name                |   
-| Student 2 name              |   
+| Henok                |   
+| Falmata              |   
 | Student 3 name               |   
 | Student 4 name                |   
 
