Lab Report Introduction part completed

--- a/seng637-a1-24.md
+++ b/seng637-a1-24.md
@@ -33,8 +33,14 @@ learned	1](#_Toc439194682)
 
 # Introduction
 
-An introduction of your lab work, and what you knew about exploratory and manual
-functional testing before this lab
+In this lab, we evaluated an ATM simulation system using two methods: exploratory testing (unscripted, curiosity-driven testing) and manual functional testing (structured, scripted test cases). Our goal was to uncover defects, compare testing strategies, and practice using tools like Jira for defect tracking.
+
+### What We Knew Before the Lab:
+Before starting, we had a basic understanding of:
+
+- Exploratory Testing: A flexible, ad-hoc approach where software testers learn the system on-the-fly and design tests dynamically. We imagined it would feel like "detective work" to find hidden bugs.
+
+- Manual Functional Testing: A methodical process using predefined test cases. We assumed it would feel more systematic but less creative.
 
 # High-level description of the exploratory testing plan
 
