testing obasa acces

--- a/seng637-a1-24.md
+++ b/seng637-a1-24.md
@@ -44,7 +44,7 @@ Before starting, we had a basic understanding of:
 
 # High-level description of the exploratory testing plan
 
-Text…
+testing
 
 # Comparison of exploratory and manual functional testing
 
