added the High-level description of the exploratory testing plan

--- a/seng637-a1-24.md
+++ b/seng637-a1-24.md
@@ -44,7 +44,15 @@ Before starting, we had a basic understanding of:
 
 # High-level description of the exploratory testing plan
 
-testing
+For exploratory testing, we adopted a user-centric approach, simulating real-world scenarios without predefined scripts. Key areas tested included:
+
+- Transactions: Deposits, withdrawals, and transfers.
+
+- Edge Cases: Zero-dollar transfers, invalid PIN entries, and boundary amounts.
+
+- UI/UX: Menu navigation, error messages, and receipt accuracy.
+
+We prioritized risk-prone features, such as fund transfers and balance calculations, and allowed intuition to guide test execution. For example, entering a 23-digit PIN revealed a system crash, and testing $0.00 transfers exposed balance deduction flaws.
 
 # Comparison of exploratory and manual functional testing
 
