--- a/seng637-a1-24.md
+++ b/seng637-a1-24.md
@@ -29,7 +29,7 @@
 
 [7. Comments/feedback on the lab and lab document itself](#commentsfeedback-on-the-lab-and-lab-document-itself)
 
-# Introduction
+1 # Introduction
 
 In this lab, we evaluated an ATM simulation system using two methods: exploratory testing (unscripted, curiosity-driven testing) and manual functional testing (structured, scripted test cases). Our goal was to uncover defects, compare testing strategies, and practice using tools like Jira for defect tracking.
 
@@ -40,7 +40,7 @@ Before starting, we had a basic understanding of:
 
 - Manual Functional Testing: A methodical process using predefined test cases. We assumed it would feel more systematic but less creative.
 
-# High-level description of the exploratory testing plan
+2 # High-level description of the exploratory testing plan
 
 
 For exploratory testing, we adopted a **user-centric approach**, simulating real-world scenarios without predefined scripts. Key areas tested included:
@@ -51,7 +51,7 @@ For exploratory testing, we adopted a **user-centric approach**, simulating real
 We prioritized **risk-prone features**, such as fund transfers and balance calculations, and allowed intuition to guide test execution. For example, entering a 23-digit PIN revealed a system crash, and testing $0.00 transfers exposed balance deduction flaws.
 
 
-# Comparison of exploratory and manual functional testing
+3 # Comparison of exploratory and manual functional testing
 
 | **Aspect**               | **Exploratory Testing**                                  | **Manual Functional Testing**                |  
 |--------------------------|---------------------------------------------------------|----------------------------------------------|  
@@ -73,14 +73,14 @@ During an Exploratory testing – we tried weird stuff just to see what would br
 
 Together, they were like a superhero duo. Exploratory testing found the “Why is my balance $500 instead of $5000?!” mess. Manual testing made sure the basics (like withdrawing cash) didn’t blow up. Not perfect, but at least we knew the ATM could handle real people.   
 
-# Notes and discussion of the peer reviews of defect reports
+4 # Notes and discussion of the peer reviews of defect reports
 
 We conducted **peer reviews** to ensure defect reports were clear, reproducible, and prioritized. Key observations:
 - **Clarity**: Reports initially lacked screenshots for UI errors (e.g., "Unknown Error" screen). We added attachments to improve reproducibility.
 - **Severity**: Critical bugs (e.g., balance deductions) were prioritized over cosmetic issues (e.g., missing "$" signs).
 - **Feedback**: Falmata suggested refining steps to reproduce for complex defects (e.g., divergent Git branches).
 
-# How the pair testing was managed and team work/effort was divided 
+5 # How the pair testing was managed and team work/effort was divided 
 
 We divided tasks based on expertise and rotated roles:
 - **Henok**: Focused on transaction logic (deposits, transfers) and defect documentation.
@@ -92,7 +92,7 @@ For pair testing, we used a **"driver-Reporter"** model:
 
 Daily sync-ups ensured alignment, and version control (Git) was used to track code changes.
 
-# Difficulties encountered, challenges overcome, and lessons learned
+6 # Difficulties encountered, challenges overcome, and lessons learned
 
 ### Challenges:
 - **Divergent Git Branches**: Caused push failures; resolved with `git rebase`.
@@ -106,6 +106,6 @@ knowing acutally how many bugs are in the program.
 - **Communicate Clearly**: Regular team check-ins prevented duplicated efforts.
 
 
-# Comments/feedback on the lab and lab document itself
+7 # Comments/feedback on the lab and lab document itself
 
-The Assignment description is too long.
+The assignment description is overly lengthy, making it harder to quickly grasp the key requirements. A more concise version would improve clarity and readability.
