Table of contents Field updated!

--- a/seng637-a1-24.md
+++ b/seng637-a1-24.md
@@ -40,6 +40,8 @@ Before starting, we had a basic understanding of:
 
 - Manual Functional Testing: A methodical process using predefined test cases. We assumed it would feel more systematic but less creative.
 
+By combining these approaches, we uncovered 14 critical defects, ranging from balance calculation errors to confusing user interfaces. This lab taught us how to balance creativity with structure in software testing.
+
 2 # High-level description of the exploratory testing plan
 
 
