RESOLVED! wrong content added into a wrong file.

--- a/seng637-a1-24.md
+++ b/seng637-a1-24.md
@@ -12,24 +12,22 @@
 
 **Table of Contents**
 
-(When you finish writing, update the following list using right click, then
-“Update Field”)
 
-[1. Introduction](#introduction)
+[1 Introduction](#introduction)
 
-[2. High-level description of the exploratory testing plan](#high-level-description-of-the-exploratory-testing-plan)
+[2 High-Level Testing Plan](<#high-level-testing-plan>)
 
-[3. Comparison of exploratory and manual functional testing](#comparison-of-exploratory-and-manual-functional-testing)
+[3 Comparison of exploratory and manual functional testing](#comparison-of-exploratory-and-manual-functional-testing)
 
-[4. Notes and discussion of the peer reviews of defect reports](#notes-and-discussion-of-the-peer-reviews-of-defect-reports)
+[4 Notes and discussion of the peer reviews of defect reports](#notes-and-discussion-of-the-peer-reviews-of-defect-reports)
 
-[5. How the pair testing was managed and team work/effort was divided](#how-the-pair-testing-was-managed-and-team-workeffort-was-divided)
+[5 How the pair testing was managed and team work/effort was divided](#how-the-pair-testing-was-managed-and-team-workeffort-was-divided)
 
-[6. Difficulties encountered, challenges overcome, and lessons learned](#difficulties-encountered-challenges-overcome-and-lessons-learned)
+[6 Difficulties encountered, challenges overcome, and lessons learned](#difficulties-encountered-challenges-overcome-and-lessons-learned)
 
-[7. Comments/feedback on the lab and lab document itself](#commentsfeedback-on-the-lab-and-lab-document-itself)
+[7 Comments/feedback on the lab and lab document itself](#commentsfeedback-on-the-lab-and-lab-document-itself)
 
-1 # Introduction
+# Introduction
 
 In this lab, we evaluated an ATM simulation system using two methods: exploratory testing (unscripted, curiosity-driven testing) and manual functional testing (structured, scripted test cases). Our goal was to uncover defects, compare testing strategies, and practice using tools like Jira for defect tracking.
 
@@ -40,20 +38,27 @@ Before starting, we had a basic understanding of:
 
 - Manual Functional Testing: A methodical process using predefined test cases. We assumed it would feel more systematic but less creative.
 
-By combining these approaches, we uncovered 14 critical defects, ranging from balance calculation errors to confusing user interfaces. This lab taught us how to balance creativity with structure in software testing.
-
-2 # High-level description of the exploratory testing plan
+# High-Level Testing Plan
 
 
-For exploratory testing, we adopted a **user-centric approach**, simulating real-world scenarios without predefined scripts. Key areas tested included:
-- **Transactions**: Deposits, withdrawals, and transfers.
-- **Edge Cases**: Zero-dollar transfers, invalid PIN entries, and boundary amounts.
-- **UI/UX**: Menu navigation, error messages, and receipt accuracy.
+We simulated real-world user behavior to uncover unexpected flaws. Key focus areas included:  
+1. **Transactions**:  
+   - Deposits, withdrawals, and transfers.  
+   - Example: Transferring $0.00 deducted $0.50 from Savings in V1.0.  
+2. **Edge Cases**:  
+   - Testing extreme inputs (e.g., 23-digit PINs, $0.00 transfers).  
+   - Example: A 23-digit PIN crashed the system with a garbled green screen.  
+3. **UI/UX**:  
+   - Checking menus, error messages, and receipts.  
+   - Example: The prompt asked, "**Wood** you like another transaction?"  
 
-We prioritized **risk-prone features**, such as fund transfers and balance calculations, and allowed intuition to guide test execution. For example, entering a 23-digit PIN revealed a system crash, and testing $0.00 transfers exposed balance deduction flaws.
+### Risk-Prone Features  
+We prioritized high-impact features:  
+- Balance calculations (e.g., depositing $100 *subtracted* $10 in V1.0).  
+- Fund transfers (e.g., receipts reversed transfer directions).  
 
 
-3 # Comparison of exploratory and manual functional testing
+# Comparison of exploratory and manual functional testing
 
 | **Aspect**               | **Exploratory Testing**                                  | **Manual Functional Testing**                |  
 |--------------------------|---------------------------------------------------------|----------------------------------------------|  
@@ -75,39 +80,55 @@ During an Exploratory testing – we tried weird stuff just to see what would br
 
 Together, they were like a superhero duo. Exploratory testing found the “Why is my balance $500 instead of $5000?!” mess. Manual testing made sure the basics (like withdrawing cash) didn’t blow up. Not perfect, but at least we knew the ATM could handle real people.   
 
-4 # Notes and discussion of the peer reviews of defect reports
+# Notes and discussion of the peer reviews of defect reports
 
-We conducted **peer reviews** to ensure defect reports were clear, reproducible, and prioritized. Key observations:
-- **Clarity**: Reports initially lacked screenshots for UI errors (e.g., "Unknown Error" screen). We added attachments to improve reproducibility.
-- **Severity**: Critical bugs (e.g., balance deductions) were prioritized over cosmetic issues (e.g., missing "$" signs).
-- **Feedback**: Falmata suggested refining steps to reproduce for complex defects (e.g., divergent Git branches).
+Peer reviews improved our defect reports by:  
+- **Adding Clarity**:  
+  - Initially missing screenshots (e.g., "Unknown Error" screen).  
+  - Added attachments to show bugs like "$500 instead of $5000."  
+- **Prioritizing Severity**:  
+  - Critical bugs (e.g., balance deductions) ranked higher than cosmetic issues.  
+- **Refining Reproducibility**:  
+  - Simplified steps for complex bugs (e.g., "$0.00 transfer issue").  
 
-5 # How the pair testing was managed and team work/effort was divided 
+These reviews taught us to write **developer-friendly reports** – clear, concise, and actionable. 
+
+# How the pair testing was managed and team work/effort was divided 
 
 We divided tasks based on expertise and rotated roles:
-- **Henok**: Focused on transaction logic (deposits, transfers) and defect documentation.
-- **Falmata**: Tested UI/UX flows (balance inquiries, error handling) and managed Jira tickets.
+- **Henok**: Focused on transactions (deposits, transfers) and defect documentation.  
+- **Falmata**: Tested UI/UX (balance inquiries, error handling) and managed Jira.  
 
-For pair testing, we used a **"driver-Reporter"** model:
-- The **driver** executed tests.
-- The **Reporter** observed, took notes, and suggested edge cases.
+### Pair Testing Strategy  
+- **Driver-Reporter Model**:  
+  - **Driver**: Executed tests (e.g., withdrawing $60).  
+  - **Reporter**: Took notes and suggested edge cases (e.g., "What if we try $0?").  
 
-Daily sync-ups ensured alignment, and version control (Git) was used to track code changes.
-
-6 # Difficulties encountered, challenges overcome, and lessons learned
-
-### Challenges:
-- **Divergent Git Branches**: Caused push failures; resolved with `git rebase`.
-- **Inconsistent Defect Behavior**: Some bugs behaved differently across versions (e.g., $0.50 deduction in V1.0 vs. no deduction in V1.1).
-- **Time Constraints**: Balancing thorough testing with lab deadlines, and not
-knowing acutally how many bugs are in the program.
-
-### Lessons Learned:
-- **Test Early, Test Often**: Catching defects early reduces downstream risks.
-- **Document Everything**: Clear steps-to-reproduce are critical for developers.
-- **Communicate Clearly**: Regular team check-ins prevented duplicated efforts.
+### Collaboration  
+- Daily sync-ups ensured alignment.  
+- Example: When Henok found the "Wood" typo, Falmata cross-checked it in both versions.  
 
 
-7 # Comments/feedback on the lab and lab document itself
+# Difficulties encountered, challenges overcome, and lessons learned
 
-The assignment description is overly lengthy, making it harder to quickly grasp the key requirements. A more concise version would improve clarity and readability.
+### Challenges  
+1. **Divergent Git Branches**:  
+   - *Problem*: Code push failures due to conflicting versions.  
+   - *Solution*: Resolved with `git rebase` after teamwork and research.  
+2. **Inconsistent Bugs**:  
+   - *Problem*: Bugs behaved differently in V1.0 vs. V1.1 (e.g., $10 vs. $1 deduction).  
+   - *Solution*: Tagged defects with versions and retested fixes.  
+3. **Time Constraints**:  
+   - *Problem*: Balancing thorough testing with deadlines.  
+   - *Solution*: Prioritized critical bugs (e.g., balance errors).  
+
+### Lessons Learned  
+- **Test Early**: Catching bugs early saved time (e.g., $0.50 fee).  
+- **Document Everything**: Clear steps helped developers replicate issues.  
+- **Communicate**: Daily check-ins prevented duplicated efforts.  
+
+
+
+# Comments/feedback on the lab and lab document itself
+
+The lab was a valuable introduction to software testing, teaching us to think critically and collaborate effectively – even if the ATM seemed determined to fight us! 
