--- a/seng637-a1-24.md
+++ b/seng637-a1-24.md
@@ -29,7 +29,10 @@
 
 # Introduction
 
-In this lab, we evaluated an ATM simulation system using two methods: exploratory testing (unscripted, curiosity-driven testing) and manual functional testing (structured, scripted test cases). Our goal was to uncover defects, compare testing strategies, and practice using tools like Jira for defect tracking.
+In this lab, we evaluated an ATM simulation system using three testing strategies: **exploratory testing**, **manual functional testing**, and **regression testing**. Our goals were to:  
+- Uncover defects in the system.  
+- Compare the effectiveness of different testing methods.  
+- Practice using Jira for defect tracking. 
 
 ### What We Knew Before the Lab:
 Before starting, we had a basic understanding of:
@@ -37,6 +40,8 @@ Before starting, we had a basic understanding of:
 - Exploratory Testing: A flexible, ad-hoc approach where software testers learn the system on-the-fly and design tests dynamically. We imagined it would feel like "detective work" to find hidden bugs.
 
 - Manual Functional Testing: A methodical process using predefined test cases. We assumed it would feel more systematic but less creative.
+
+- Regression Testing: A process to ensure that new changes (e.g., bug fixes) don’t break existing functionality. We thought of it as a "safety net" for the system. 
 
 # High-Level Testing Plan
 
@@ -119,8 +124,8 @@ We divided tasks based on expertise and rotated roles:
    - *Problem*: Bugs behaved differently in V1.0 vs. V1.1 (e.g., $10 vs. $1 deduction).  
    - *Solution*: Tagged defects with versions and retested fixes.  
 3. **Time Constraints**:  
-   - *Problem*: Balancing thorough testing with deadlines.  
-   - *Solution*: Prioritized critical bugs (e.g., balance errors).  
+   - Regression testing was time-consuming, especially when multiple bugs were fixed.  
+   - Bugs behaved differently in V1.0 and V1.1, requiring separate regression tests for each version.    
 
 ### Lessons Learned  
 - **Test Early**: Catching bugs early saved time (e.g., $0.50 fee).  
